# feather

./: .gitignore  README.md  pyproject.toml
benchmark/: bench_activations.py  bench_attention.py  bench_attention2.py  bench_dot.py  bench_gemv.py  bench_operations.py
benchmark/ncu/: profile_activations.py  profile_attention.py  profile_gemv.py
docs/: conf.py  index.rst  packers.rst  routines.rst
feather/: main.py  operations.py  packers.py  test_dot.py  testbed.py
feather/packers/: fp16.py  fp8.py
feather/routines/: activations.py  attention.py  dot.py  gemv.py
results/: pytest_bench_result_attention.txt  pytest_bench_result_gemv.txt
