[project]
name = "feather"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "ml-dtypes>=0.5.4",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "pydata-sphinx-theme>=0.16.1",
    "pygal>=3.1.0",
    "pygaljs>=1.0.2",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "setuptools>=80.9.0",
    "sphinx>=9.0.4",
    "sphinx-autodoc-typehints>=3.6.0",
    "torch>=2.9.1",
    "triton>=3.5.1",
    "wheel>=0.45.1",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["feather"]
